# zno

./: .gitignore  CMakeLists.txt  README.md  set_test_env.cmd  set_test_env.ps1
src/: CMakeLists.txt  ansi.h  config.h  help_text.h  main.c  util.c  util.h  zno.c  zno.h
src/commands/: CMakeLists.txt  build_command.c  build_command.h  default_command.c  default_command.h  help_command.c  help_command.h  init_command.c  init_command.h  list_command.c  list_command.h  note_matching_command.c  note_matching_command.h
src/notes/: CMakeLists.txt  frontmatter.c  frontmatter.h
